--- a/drivers/uart_lp/Kconfig
+++ b/drivers/uart_lp/Kconfig
@@ -2,6 +2,7 @@
 menuconfig UART_LP
 	bool "LP UART wrapper"
 	depends on PM_DEVICE
+	depends on HEAP_MEM_POOL_SIZE > 0
 	help
 	  Enable LP UART wrapper for easier use of the lp-uart
 
